[package]
authors = ["Piotr Dulikowski <piodul@scylladb.com>"]
edition = "2018"
name = "scylla-chair"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
bytes = "1.0.1"
crc = "2.0.0"
futures = "0.3"
histogram = "0.6.9"
num-traits = "0.2.14"
parking_lot = "0.11.1"
rand = "0.8.3"
rand_distr = "0.4"
rand_pcg = "0.3.1"
scylla = {git = "https://github.com/scylladb/scylla-rust-driver", branch = "main"}
thread_local = "1.1.3"
tokio = {version = "1.1.0", features = ["full"]}

[profile.release]
lto = true
